Fixed top nav spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -281,7 +281,6 @@ input {
     background-color:rgba(73, 174, 228, .8);
     overflow: hidden;
     width: 100vw;
-    height: 7%;
 }
 
 /* Style the links inside the navigation bar */
